--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
         sudo apt-get remove llvm-12 clang-12 clang-13 llvm-13 libclang-13-dev
         sudo apt-get install -y llvm clang libclang-dev llvm-14-tools llvm-dev
         sudo ln -s `which FileCheck-14` /usr/bin/FileCheck
+        pip install lit
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -37,5 +38,4 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        clang -fsyntax-only -fplugin=build/CToWit.so -Xclang -plugin -Xclang ctowit -fplugin-arg-ctowit-asdasd test/simple_integers.c | FileCheck test/simple_integers.c
-        clang -fsyntax-only -fplugin=build/CToWit.so -Xclang -plugin -Xclang ctowit test/floats.c | FileCheck test/floats.c
+        lit -vv ${{github.workspace}}/test
