--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,41 +1,35 @@
-name: CMake
+name: Meson
 
 on:
-  push
-
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
+  [push, pull_request]
 
 jobs:
-  build:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+  ci:
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 10
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest]
+        compiler: [g++, clang++]
 
+    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
     steps:
     - uses: actions/checkout@v3
-
-    - name: Install LLVM
+    - name: Install LLVM (Ubuntu)
+      if: ${{ matrix.os == 'ubuntu-latest' }}
       run: |
         sudo apt-get remove llvm-12 clang-12 clang-13 llvm-13 libclang-13-dev
-        sudo apt-get install -y llvm clang libclang-dev llvm-14-tools llvm-dev
+        sudo apt-get install -y llvm clang libclang-cpp-dev libclang-dev llvm-14-tools llvm-dev
         sudo ln -s `which FileCheck-14` /usr/bin/FileCheck
-        pip install lit
-
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DPROJECT_USE_LINKER=lld
-
-    - name: Build
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
-    - name: Test
-      working-directory: ${{github.workspace}}/
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+    - name: Setup compiler
+      if: ${{ matrix.compiler != 'g++' }}
       run: |
-        lit -vv ${{github.workspace}}/test
+        echo "CXX=${{ matrix.compiler }}" >> $GITHUB_ENV
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+    - run: pip install meson ninja lit
+    - run: meson setup build/ --buildtype=release
+    - run: meson compile -C build
+    - run: lit -vv test
