refactor: split C2Wit.cpp -> lib/*

--- a/meson.build
+++ b/meson.build
@@ -19,4 +19,13 @@ clang_dep = dependency('Clang', method : 'cmake', modules: [
   'clangSema', 'clangParse', 'clangEdit', 'clangAnalysis'
 ])
 
-library('C2Wit', ['src/C2Wit.cpp'], dependencies: [clang_dep, dependency('llvm')], install: true)
+llvm_dep = dependency('llvm')
+fmt_dep = dependency('fmt')
+
+deps = [clang_dep, llvm_dep, fmt_dep]
+
+incdir = include_directories('include')
+
+c2wit_lib = library('C2Wit', ['lib/Consumer.cpp', 'lib/Attr.cpp', 'lib/Support.cpp'], dependencies: deps, install: true, include_directories : incdir)
+
+library('C2WitPlugin', ['tools/Plugin.cpp'], dependencies: deps, install: true, link_with: c2wit_lib, include_directories : incdir)
