lib/Consumer: support function annotation & export

--- a/meson.build
+++ b/meson.build
@@ -26,6 +26,6 @@ deps = [clang_dep, llvm_dep, fmt_dep]
 
 incdir = include_directories('include')
 
-c2wit_lib = library('C2Wit', ['lib/Consumer.cpp', 'lib/Attr.cpp', 'lib/Support.cpp'], dependencies: deps, install: true, include_directories : incdir)
+c2wit_lib = library('C2Wit', ['lib/Consumer.cpp', 'lib/Support.cpp'], dependencies: deps, install: true, include_directories : incdir)
 
 library('C2WitPlugin', ['tools/Plugin.cpp'], dependencies: deps, install: true, link_with: c2wit_lib, include_directories : incdir)
