--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -23,7 +23,9 @@ jobs:
     - run: nix build .#container
     - name: Log in to registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
-    - run: |
+    - name: Push the image
+      run: |
         IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
         docker load < ./result
-        docker push -a $IMAGE_ID
+        docker tag $IMAGE_NAME:latest $IMAGE_ID:latest
+        docker push $IMAGE_ID:latest
